syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/Prrromanssss/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    repeated string emails = 1 [
        (validate.rules).repeated = {min_items: 1},
        (validate.rules).string = {email: true}
    ];
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1 [
        (validate.rules).int64 = {gt: 0}
    ];
}

message SendMessageRequest {
    string from = 1 [
        (validate.rules).string = {min_len: 1, email: true}
    ];
    string text = 2 [
        (validate.rules).string = {min_len: 1}
    ];
    google.protobuf.Timestamp timestamp = 3;
}